# historical-nanochat

./: .gitignore  README.md  SECURITY.md  claude.md  convert_to_hf.py  pyproject.toml  run_scaling_3090.sh  serve.py
.claude/: settings.local.json
context/: historical-model-landscape-2026-06-09.md
docs/: DATA_ACCESS.md  IMPLEMENTATION_PLAN.md  TRAINING_3090.md  current_state_vs_plan_2026-04-20.html  current_state_vs_plan_2026-04-20.md  decision_gate_2026-04-20.md  historical_nanochat_access_emails.md  historical_nanochat_claude_code_action_plan.md  historical_nanochat_claude_remaining_instructions.md  historical_nanochat_next_steps.md
nanochat/: README.md  historical_3090_base.sh  historical_3090_eval.sh  historical_3090_mid.sh
probes/: harness.py  probe_sets.py  run_pilot.py
report/: RUN_RECLASSIFICATION_2026-04-20.md  base-model-training.md  crash_2026-04-21_oom_cgroup_postmortem.md  decision_gate_2026-04-21.md  decision_gate_T24_T48_template.md  governed_corpus_recovery_plan_2026-04-21.md  governed_v4_launch_justification.html  governed_v4_launch_justification.md  governed_v4_long_launch_record.json  governed_v4_long_launch_record_run2.json  governed_v4_run1_postmortem_detailed.html  governed_v4_run1_postmortem_detailed.md  governed_v4_run1_provenance_bug_postmortem.md  token_cache_v3_smoke.md  tokenizer-training.md  v4_gpu_smoke_plan.md  v4_smoke2_launch_record.json  v4_smoke4_stage1_result.md  v4_smoke_launch_record.json  v4_smoke_result.md  v4_smoke_series_report.html  v4_smoke_series_report.md  verification_step000100_20260424T044757Z.md  (+4 more)
(+118 files in other folders)
