[project]
name = "historical-nanochat"
version = "0.1.0"
description = "Historical time-locked LLM training using nanochat pipeline"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub>=0.21.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "python-dateutil>=2.8.0",
    "ftfy>=6.1.0",
    "regex>=2023.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
gpu = [
    "torch>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "scripts"]
